--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.37.1
-pandas==2.2.2
+pandas>=2.1.0
 pdfplumber==0.11.4
 python-docx==1.1.2
-openai==1.40.3
-httpx==0.27.2
+openai>=1.50.0
